--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "leaflet": "^1.3.0",
     "liquor-tree": "^0.2.49",
     "moxios": "^0.4.0",
     "vue": "^2.5.21"
